--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -10602,16 +10602,67 @@ header.top {
 .sub-finish {
   padding-top: 60px;
   padding-bottom: 60px;
+  padding-left: 60px;
+  padding-right: 60px;
+  position: relative;
+}
+@media screen and (min-width: 1600px) {
+  .sub-finish {
+    height: 100vh;
+  }
+}
+.sub-finish#sub-mettalic {
+  background: url("../images/finishes/sub-mettalic-bg.png") no-repeat top center;
+  background-size: cover;
+}
+.sub-finish#sub-solid {
+  background: url("../images/finishes/sub-solid-bg.png") no-repeat top 25% left;
+  background-size: cover;
+}
+.sub-finish#sub-textured {
+  background: url("../images/finishes/sub-textured-bg.png") no-repeat left center;
+  background-size: cover;
+}
+.sub-finish#sub-brush {
+  background: url("../images/finishes/sub-brush-bg.png") no-repeat left center;
+  background-size: cover;
+}
+.sub-finish#sub-anodized {
+  background: url("../images/finishes/sub-anodized-bg.png") no-repeat left center;
+  background-size: cover;
+}
+.sub-finish#sub-rock {
+  background: url("../images/finishes/sub-rock-bg.png") no-repeat left center;
+  background-size: cover;
+}
+.sub-finish#sub-woodgrain {
+  background: url("../images/finishes/sub-woodgrain-bg.png") no-repeat left center;
+  background-size: cover;
 }
 .sub-finish .sub-title {
   text-transform: uppercase;
   font-size: 60px;
   font-family: GalaxiePolarisBold;
   margin-bottom: 52px;
+  color: white;
 }
 @media screen and (max-width: 996.67px) {
   .sub-finish .sub-title {
     font-size: 24px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  .sub-finish {
+    height: 100vh;
+  }
+  .sub-finish .sub-title {
+    font-size: 220px;
+    opacity: 46%;
+    position: absolute;
+    left: -4px;
+    bottom: -5%;
+    color: white;
+    margin-bottom: 0;
   }
 }
 .sub-finish .sub .sub-image {
@@ -10625,6 +10676,7 @@ header.top {
   font-size: 15px;
   font-family: GalaxiePolarisMedium;
   text-transform: uppercase;
+  color: white;
 }
 
 .projects {
