--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -30,7 +30,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #FF9015;
+  --bs-primary: #FF7800;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -38,7 +38,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 255, 144, 21;
+  --bs-primary-rgb: 255, 120, 0;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -69,8 +69,8 @@
   --bs-border-radius-xl: 1rem;
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
-  --bs-link-color: #FF9015;
-  --bs-link-hover-color: #cc7311;
+  --bs-link-color: #FF7800;
+  --bs-link-hover-color: #cc6000;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
 }
@@ -2029,13 +2029,13 @@ progress {
 
 .table-primary {
   --bs-table-color: #000;
-  --bs-table-bg: #ffe9d0;
-  --bs-table-border-color: #e6d2bb;
-  --bs-table-striped-bg: #f2ddc6;
+  --bs-table-bg: #ffe4cc;
+  --bs-table-border-color: #e6cdb8;
+  --bs-table-striped-bg: #f2d9c2;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #e6d2bb;
+  --bs-table-active-bg: #e6cdb8;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #ecd8c0;
+  --bs-table-hover-bg: #ecd3bd;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -2233,9 +2233,9 @@ progress {
 .form-control:focus {
   color: #1D1D1B;
   background-color: #fff;
-  border-color: #ffc88a;
+  border-color: #ffbc80;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(255, 144, 21, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(255, 120, 0, 0.25);
 }
 .form-control::-webkit-date-and-time-value {
   height: 1.5em;
@@ -2371,9 +2371,9 @@ textarea.form-control-lg {
   }
 }
 .form-select:focus {
-  border-color: #ffc88a;
+  border-color: #ffbc80;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(255, 144, 21, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(255, 120, 0, 0.25);
 }
 .form-select[multiple], .form-select[size]:not([size="1"]) {
   padding-right: 0.75rem;
@@ -2448,13 +2448,13 @@ textarea.form-control-lg {
   filter: brightness(90%);
 }
 .form-check-input:focus {
-  border-color: #ffc88a;
+  border-color: #ffbc80;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(255, 144, 21, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(255, 120, 0, 0.25);
 }
 .form-check-input:checked {
-  background-color: #FF9015;
-  border-color: #FF9015;
+  background-color: #FF7800;
+  border-color: #FF7800;
 }
 .form-check-input:checked[type=checkbox] {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
@@ -2463,8 +2463,8 @@ textarea.form-control-lg {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
 }
 .form-check-input[type=checkbox]:indeterminate {
-  background-color: #FF9015;
-  border-color: #FF9015;
+  background-color: #FF7800;
+  border-color: #FF7800;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 .form-check-input:disabled {
@@ -2494,7 +2494,7 @@ textarea.form-control-lg {
   }
 }
 .form-switch .form-check-input:focus {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23ffc88a'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23ffbc80'/%3e%3c/svg%3e");
 }
 .form-switch .form-check-input:checked {
   background-position: right center;
@@ -2536,10 +2536,10 @@ textarea.form-control-lg {
   outline: 0;
 }
 .form-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(255, 144, 21, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(255, 120, 0, 0.25);
 }
 .form-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(255, 144, 21, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(255, 120, 0, 0.25);
 }
 .form-range::-moz-focus-outer {
   border: 0;
@@ -2548,7 +2548,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #FF9015;
+  background-color: #FF7800;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2560,7 +2560,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-webkit-slider-thumb:active {
-  background-color: #ffdeb9;
+  background-color: #ffd7b3;
 }
 .form-range::-webkit-slider-runnable-track {
   width: 100%;
@@ -2574,7 +2574,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #FF9015;
+  background-color: #FF7800;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2586,7 +2586,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-moz-range-thumb:active {
-  background-color: #ffdeb9;
+  background-color: #ffd7b3;
 }
 .form-range::-moz-range-track {
   width: 100%;
@@ -3019,19 +3019,19 @@ textarea.form-control-lg {
 
 .btn-primary {
   --bs-btn-color: #000;
-  --bs-btn-bg: #FF9015;
-  --bs-btn-border-color: #FF9015;
+  --bs-btn-bg: #FF7800;
+  --bs-btn-border-color: #FF7800;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #ffa138;
-  --bs-btn-hover-border-color: #ff9b2c;
-  --bs-btn-focus-shadow-rgb: 217, 122, 18;
+  --bs-btn-hover-bg: #ff8c26;
+  --bs-btn-hover-border-color: #ff861a;
+  --bs-btn-focus-shadow-rgb: 217, 102, 0;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #ffa644;
-  --bs-btn-active-border-color: #ff9b2c;
+  --bs-btn-active-bg: #ff9333;
+  --bs-btn-active-border-color: #ff861a;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #FF9015;
-  --bs-btn-disabled-border-color: #FF9015;
+  --bs-btn-disabled-bg: #FF7800;
+  --bs-btn-disabled-border-color: #FF7800;
 }
 
 .btn-secondary {
@@ -3154,19 +3154,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-  --bs-btn-color: #FF9015;
-  --bs-btn-border-color: #FF9015;
+  --bs-btn-color: #FF7800;
+  --bs-btn-border-color: #FF7800;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #FF9015;
-  --bs-btn-hover-border-color: #FF9015;
-  --bs-btn-focus-shadow-rgb: 255, 144, 21;
+  --bs-btn-hover-bg: #FF7800;
+  --bs-btn-hover-border-color: #FF7800;
+  --bs-btn-focus-shadow-rgb: 255, 120, 0;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #FF9015;
-  --bs-btn-active-border-color: #FF9015;
+  --bs-btn-active-bg: #FF7800;
+  --bs-btn-active-border-color: #FF7800;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #FF9015;
+  --bs-btn-disabled-color: #FF7800;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #FF9015;
+  --bs-btn-disabled-border-color: #FF7800;
   --bs-gradient: none;
 }
 
@@ -3301,7 +3301,7 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #6c757d;
   --bs-btn-disabled-border-color: transparent;
   --bs-btn-box-shadow: none;
-  --bs-btn-focus-shadow-rgb: 217, 122, 18;
+  --bs-btn-focus-shadow-rgb: 217, 102, 0;
   text-decoration: underline;
 }
 .btn-link:focus-visible {
@@ -3408,7 +3408,7 @@ textarea.form-control-lg {
   --bs-dropdown-link-hover-color: #1e2125;
   --bs-dropdown-link-hover-bg: #e9ecef;
   --bs-dropdown-link-active-color: #fff;
-  --bs-dropdown-link-active-bg: #FF9015;
+  --bs-dropdown-link-active-bg: #FF7800;
   --bs-dropdown-link-disabled-color: #adb5bd;
   --bs-dropdown-item-padding-x: 1rem;
   --bs-dropdown-item-padding-y: 0.25rem;
@@ -3678,7 +3678,7 @@ textarea.form-control-lg {
   --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
   --bs-dropdown-link-hover-bg: rgba(255, 255, 255, 0.15);
   --bs-dropdown-link-active-color: #fff;
-  --bs-dropdown-link-active-bg: #FF9015;
+  --bs-dropdown-link-active-bg: #FF7800;
   --bs-dropdown-link-disabled-color: #adb5bd;
   --bs-dropdown-header-color: #adb5bd;
 }
@@ -3861,7 +3861,7 @@ textarea.form-control-lg {
 .nav-pills {
   --bs-nav-pills-border-radius: 0.375rem;
   --bs-nav-pills-link-active-color: #fff;
-  --bs-nav-pills-link-active-bg: #FF9015;
+  --bs-nav-pills-link-active-bg: #FF7800;
 }
 .nav-pills .nav-link {
   background: none;
@@ -4527,7 +4527,7 @@ textarea.form-control-lg {
 }
 .btn-close:focus {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(255, 144, 21, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(255, 120, 0, 0.25);
   opacity: 1;
 }
 .btn-close:disabled, .btn-close.disabled {
@@ -5155,7 +5155,7 @@ textarea.form-control-lg {
 
 .text-bg-primary {
   color: #000 !important;
-  background-color: RGBA(255, 144, 21, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(255, 120, 0, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-secondary {
@@ -5194,10 +5194,10 @@ textarea.form-control-lg {
 }
 
 .link-primary {
-  color: #FF9015 !important;
+  color: #FF7800 !important;
 }
 .link-primary:hover, .link-primary:focus {
-  color: #ffa644 !important;
+  color: #ff9333 !important;
 }
 
 .link-secondary {
@@ -10149,6 +10149,8 @@ header.top {
   }
 }
 .my-nav .navbar-nav > .nav-item > .nav-link {
+  background-color: transparent;
+  border: none;
   font-family: GalaxiePolarisMedium;
   font-size: 17px;
   text-transform: uppercase;
@@ -10506,7 +10508,7 @@ header.top {
   font-size: 28px;
   font-family: GalaxiePolarisBold;
   color: white;
-  background-color: #FF9015;
+  background-color: #FF7800;
 }
 .products .product-specs > tbody > tr td {
   font-size: 25px;
@@ -11175,6 +11177,44 @@ header.top {
     padding-top: 24px !important;
     padding-bottom: 24px !important;
   }
+}
+#productsCarousel .carousel-inner .carousel-item {
+  position: relative;
+}
+#productsCarousel .carousel-inner .carousel-item .carousel-caption {
+  padding: 0;
+  position: absolute;
+  text-align: left;
+  left: 100%;
+  transform: translateX(-100%);
+  width: 100%;
+  bottom: 0;
+  max-width: 190px;
+}
+#productsCarousel .carousel-inner .carousel-item .carousel-caption * {
+  font-size: 16px;
+  color: #ff7800;
+  font-family: "Barlow", sans-serif;
+  font-weight: 900;
+}
+#productsCarousel .carousel-inner .carousel-item img {
+  max-width: 65%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  min-height: 488px;
+  max-height: 488px;
+  object-fit: contain;
+}
+#productsCarousel .carousel-control-next-icon {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80.471' height='71.679' viewBox='0 0 80.471 71.679'%3E%3Cg id='right' transform='translate(-7771.882 -525.454)' opacity='0.5'%3E%3Cpath id='Path_123' data-name='Path 123' d='M7790.972,597.133l-19.09-19.09,16.75-16.749-16.75-16.749,19.09-19.091,35.839,35.84Zm-6.321-19.09,6.321,6.321,23.071-23.07-23.071-23.071-6.321,6.322,16.75,16.749Z' fill='%23fff'/%3E%3Cpath id='Path_124' data-name='Path 124' d='M7816.513,597.133l-19.09-19.09,16.749-16.749-16.749-16.749,19.09-19.091,35.84,35.84Zm-6.322-19.09,6.322,6.321,23.071-23.07-23.071-23.071-6.322,6.322,16.75,16.749Z' fill='%23fff'/%3E%3C/g%3E%3C/svg%3E%0A");
+}
+#productsCarousel .carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80.471' height='71.679' viewBox='0 0 80.471 71.679'%3E%3Cg id='left' transform='translate(-6397.338 -525.454)' opacity='0.5'%3E%3Cpath id='Path_125' data-name='Path 125' d='M6458.718,525.454l19.091,19.091-16.75,16.749,16.75,16.749-19.091,19.09-35.838-35.839Zm6.322,19.091-6.322-6.322-23.07,23.071,23.07,23.071,6.322-6.322-16.75-16.749Z' fill='%23fff'/%3E%3Cpath id='Path_126' data-name='Path 126' d='M6433.178,525.454l19.09,19.091-16.75,16.749,16.75,16.749-19.09,19.09-35.84-35.839Zm6.321,19.091-6.321-6.322-23.072,23.071,23.072,23.071,6.321-6.322-16.75-16.749Z' fill='%23fff'/%3E%3C/g%3E%3C/svg%3E%0A");
+}
+
+#projectsModal .btn-close {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='43.588' height='43.587' viewBox='0 0 43.588 43.587'%3E%3Cg id='cross' transform='translate(-1833.921 -37.83)'%3E%3Cpath id='Path_127' data-name='Path 127' d='M8023.971,81.417a21.793,21.793,0,1,1,21.794-21.794A21.818,21.818,0,0,1,8023.971,81.417Zm0-41.506a19.712,19.712,0,1,0,19.713,19.713A19.735,19.735,0,0,0,8023.971,39.911Z' transform='translate(-6168.256)' fill='%23fff'/%3E%3Cpath id='Path_128' data-name='Path 128' d='M8034.306,53.151l-3.253-3.253-7.07,7.07-7.07-7.07-3.253,3.253,7.07,7.07-7.07,7.07,3.253,3.253,7.07-7.07,7.07,7.07,3.253-3.253-7.07-7.07Z' transform='translate(-6168.256)' fill='%23fff'/%3E%3C/g%3E%3C/svg%3E%0A");
 }
 
 /*# sourceMappingURL=bootstrap.css.map */
